force-app/main/default/objects/Initiative__c/Initiative__c.object-meta.xml
<CustomObject>
    <label>Initiative</label>
    <nameField>
        <label>Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>