force-app/main/default/objects/Initiative__c/fields/ActiveMinimumToContinue__c.field-meta.xml
<CustomField>
    <fullName>ActiveMinimumToContinue__c</fullName>
    <label>Active Minimum To Continue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>