force-app/main/default/objects/Initiative__c/fields/ActiveMinimumToStart__c.field-meta.xml
<CustomField>
    <fullName>ActiveMinimumToStart__c</fullName>
    <label>Active Minimum To Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>