force-app/main/default/objects/Initiative__c/fields/ActiveParticipants__c.field-meta.xml
<CustomField>
    <fullName>ActiveParticipants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Participants</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>