force-app/main/default/objects/Initiative__c/fields/AddThreshhold__c.field-meta.xml
<CustomField>
    <fullName>AddThreshhold__c</fullName>
    <label>Add Threshhold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>