force-app/main/default/objects/Initiative__c/fields/CurrentEvent__c.field-meta.xml
<CustomField>
    <fullName>CurrentEvent__c</fullName>
    <label>Current Event</label>
    <type>Date</type>
</CustomField>