force-app/main/default/objects/Initiative__c/fields/DaysToPause__c.field-meta.xml
<CustomField>
    <fullName>DaysToPause__c</fullName>
    <label>Days To Pause</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>