force-app/main/default/objects/Initiative__c/fields/EventCount__c.field-meta.xml
<CustomField>
    <fullName>EventCount__c</fullName>
    <label>Event Count</label>
    <summaryForeignKey>InitiativeEvent__c.Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>