force-app/main/default/objects/Initiative__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week 1</fullName>
            </value>
            <value>
                <fullName>Week 2</fullName>
            </value>
            <value>
                <fullName>Week 3</fullName>
            </value>
            <value>
                <fullName>Week 4</fullName>
            </value>
            <value>
                <fullName>Week 5</fullName>
            </value>
            <value>
                <fullName>Week 6</fullName>
            </value>
            <value>
                <fullName>Week 7</fullName>
            </value>
            <value>
                <fullName>Week 8</fullName>
            </value>
            <value>
                <fullName>Week 9</fullName>
            </value>
            <value>
                <fullName>Week 10</fullName>
            </value>
            <value>
                <fullName>Week 11</fullName>
            </value>
            <value>
                <fullName>Week 12</fullName>
            </value>
            <value>
                <fullName>Week 13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>