force-app/main/default/objects/Initiative__c/fields/InactiveParticipants__c.field-meta.xml
<CustomField>
    <fullName>InactiveParticipants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inactive Participants</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Initiatives (Inactive Participants)</relationshipLabel>
    <relationshipName>Initiatives1</relationshipName>
    <type>Lookup</type>
</CustomField>