force-app/main/default/objects/Initiative__c/fields/NoticeBatchSize__c.field-meta.xml
<CustomField>
    <fullName>NoticeBatchSize__c</fullName>
    <label>Notice Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>