force-app/main/default/objects/Initiative__c/fields/NoticePause__c.field-meta.xml
<CustomField>
    <fullName>NoticePause__c</fullName>
    <label>Notice Pause</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>