force-app/main/default/objects/Initiative__c/fields/Repeats__c.field-meta.xml
<CustomField>
    <fullName>Repeats__c</fullName>
    <label>Repeats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>