force-app/main/default/objects/Initiative__c/fields/ToScreenParticipants__c.field-meta.xml
<CustomField>
    <fullName>ToScreenParticipants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Screen Participants</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Initiatives (To Screen Participants)</relationshipLabel>
    <relationshipName>Initiatives2</relationshipName>
    <type>Lookup</type>
</CustomField>