force-app/main/default/objects/Initiative__c/fields/UseActiveMinimums__c.field-meta.xml
<CustomField>
    <fullName>UseActiveMinimums__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Active Minimums</label>
    <type>Checkbox</type>
</CustomField>